k8s/ingress/ingress-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/board/?(.*)
            pathType: Prefix
            backend:
              service:
                name: board-app-srv
                port:
                  number: 80

          - path: /api/admin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-app-srv
                port:
                  number: 80

          - path: /api/customer/?(.*)
            pathType: Prefix
            backend:
              service:
                name: customer-app-srv
                port:
                  number: 80
